--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <div class="container">
                 <h2 class="services__title">Наши услуги</h2>
             <hr>
-            <div class="row services__col align-items-center py-5">
+            <div class="row services__col align-items-center ">
                 <div class=" col-12 col-md-6 ">
                     <img src="images/img.jpg" class="w-100 services__image services__image-first"   alt="services-img">
                 </div>
@@ -91,7 +91,7 @@
                     <a href="services.html" class="services__subtitle-button">Оставить заявку</a>
                 </div>
             </div>
-            <div class="row services__col align-items-center py-5">
+            <div class="row services__col services__col-left align-items-center ">
                 <div class=" col-12 col-md-6 services__subtitle ">
                     <h3 class="services__subtitle-text">Консалтинг</h3>
                     <a href="services.html" class="services__subtitle-button">Оставить заявку</a>
@@ -100,7 +100,7 @@
                     <img src="images/img2.jpg"  class="w-100 services__image services__image-second" alt="services-img">
                 </div>
             </div>
-            <div class="row services__col align-items-center py-5">
+            <div class="row services__col align-items-center ">
                 <div class=" col-12 col-md-6 ">
                     <img src="images/img3.jpg" class="w-100 services__image services__image-third" alt="services-img">
                 </div>
@@ -111,7 +111,7 @@
             </div>
             </div>
         </div>
-        <section class="levels py-5">
+        <section class="levels ">
             <div class="container">
                 <h2 class="levels__title">Уровни консалтинга в  IT</h2>
                 <img class="levels__schedule" src="images/levels.jpg" alt="levels-schedule">
@@ -130,7 +130,7 @@
             <div class="container">
                 <h2 class="why__title">Почему мы?</h2>
                 <hr>
-                <ul class="why__block d-flex py-5 ">
+                <ul class="why__block d-flex py-5 align-items-center ">
                     <li class="why__icons w-100">
                         <div class="why__icon"><img class="w-100" src="images/why1.png" alt=""></div>
                         <p class="why__text ">
@@ -144,7 +144,7 @@
                             </h3> Проведем аудит любой вашей системы и составим индивидуальный план со списком рекомендации по ее улучшению.
                         </p>
                     </li>
-                    <li class="why__icons">
+                    <li class="why__icons w-100">
                         <div class="why__icon"><img class="w-100" src="images/why3.png" alt=""></div>
                             <p class="why__text">
                             <h3 class="why__text-title">Прозрачное ценообразование
@@ -171,7 +171,7 @@
     </main>
     <footer class="footer  ">
     <div class="container">
-        <div class="row align-items-center py-5">
+        <div class="row  py-5">
             <div class="col-12 col-md-6 col-lg-3 footer__content footer__content-logo ">
             <div class="footer__logo ">
                 <a class="footer__logo-link" href="./index.html">
@@ -217,7 +217,6 @@
         <p class="copytext "> &copy;  2021. xxnameofcompanyxx. all rights reserved</p>
     </div>
 </footer>
-
 <script src="js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
