--- a/news.html
+++ b/news.html
@@ -65,9 +65,9 @@
         </div>
     </header>
     <main class="news">
-        <section class="news-first">
+        <section class="news-first py-3">
             <div class="container">
-            <div class="row news__content news-first__content py-5 align-items-center ">
+            <div class="row news__content news-first__content  align-items-center ">
                 <div class="col-12 col-md-8 news__title news-first__title">
                     <a href="#" class="news__title-text news-first__title-text">
                         Севастополь запустит новые госуслиги в электронном виде при поддержке ат Consulting восток             
@@ -86,7 +86,7 @@
         </section>
         <section class="news-second">
             <div class="container">
-            <div class="row news__content news-second__content py-5 align-items-center ">
+            <div class="row news__content news-second__content  align-items-center ">
                 <div class="col-12 col-md-8 news__title news-second__title">
                     <a href="#" class="news__title-text news-second__title-text">
                         Ат Consulting восток внедряет систему мониторинга реализации ФЦП развития Крыма и Севастополя          
@@ -109,17 +109,17 @@
                     </h3>
                 <div class="news__videos row align-items-center">
                     <div class="col-12 col-md-6 news__videos-video ">
-                        <iframe class="w-100"  width="640" height="360"  src="https://www.youtube.com/embed/Oc9L2Fre4Cs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <iframe class="w-100 news__videos-video-first"  width="640" height="360"  src="https://www.youtube.com/embed/Oc9L2Fre4Cs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                     <div class="col-12 col-md-6 news__videos-video ">
-                        <iframe class="w-100 " width="640" height="360"  src="https://www.youtube.com/embed/BOSD-jTu-5M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <iframe class="w-100 news__videos-video-second" width="640" height="360"  src="https://www.youtube.com/embed/BOSD-jTu-5M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
             </div>
         </section>
     </main>
     <footer class="footer  ">
     <div class="container">
-        <div class="row align-items-center py-5">
+        <div class="row  py-5">
             <div class="col-12 col-md-6 col-lg-3 footer__content footer__content-logo ">
             <div class="footer__logo ">
                 <a class="footer__logo-link" href="./index.html">
