--- a/services.html
+++ b/services.html
@@ -109,7 +109,7 @@
     </main>
     <footer class="footer  ">
     <div class="container">
-        <div class="row align-items-center py-5">
+        <div class="row  py-5">
             <div class="col-12 col-md-6 col-lg-3 footer__content footer__content-logo ">
             <div class="footer__logo ">
                 <a class="footer__logo-link" href="./index.html">
