--- a/contacts.html
+++ b/contacts.html
@@ -19,12 +19,12 @@
 <body>
     <header class="header ">
         <div class="container">
-            <div class=" align-items-center  py-5 navbar  header__inner">
+            <div class=" align-items-center  navbar  header__inner">
                     <a class=" header__inner-link" href="./index.html">
                         <img  src="images/JOGO.jpg" class="w-100 header__inner-logo" alt="Logo">
                     </a>
 
-                <div class="py-2  header__address">
+                <div class="  header__address">
                     <div class="header__address-text">
                         <a href="./contacts.html" class="header__address-location ">    
                             Улица Исакеева,2а/2, Бишкек
