--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
 <body>
     <header class="header ">
         <div class="container">
-            <div class=" align-items-center  py-5 navbar  header__inner">
+            <div class=" align-items-center  navbar  header__inner">
                     <a class=" header__inner-link" href="./index.html">
                         <img  src="images/JOGO.jpg" class="w-100 header__inner-logo" alt="Logo">
                     </a>
 
-                <div class="py-2  header__address">
+                <div class="  header__address">
                     <div class="header__address-text">
                         <a href="./contacts.html" class="header__address-location ">    
                             Улица Исакеева,2а/2, Бишкек
@@ -58,7 +58,7 @@
                         <a href="./news.html" class="  header__navbar-link">Новоти</a>
                     </li>
                     <li class="nav-item header__navbar-item">
-                        <a href="contacts.html" class="   header__navbar-link">Контакты</a>
+                        <a href="contacts.html" class="  header__navbar-link">Контакты</a>
                     </li>
                 </ul>
             </nav>
@@ -78,7 +78,7 @@
                 </div>
             </div>
         </section>
-        <div class="services py-5">
+        <div class="services">
             <div class="container">
                 <h2 class="services__title">Наши услуги</h2>
             <hr>
