--- a/news.html
+++ b/news.html
@@ -19,12 +19,12 @@
 <body>
     <header class="header ">
         <div class="container">
-            <div class=" align-items-center  py-5 navbar  header__inner">
+            <div class=" align-items-center  navbar  header__inner">
                     <a class=" header__inner-link" href="./index.html">
                         <img  src="images/JOGO.jpg" class="w-100 header__inner-logo" alt="Logo">
                     </a>
 
-                <div class="py-2  header__address">
+                <div class="  header__address">
                     <div class="header__address-text">
                         <a href="./contacts.html" class="header__address-location ">    
                             Улица Исакеева,2а/2, Бишкек
@@ -78,7 +78,7 @@
                 <div class="col-12 col-md-4 news__images news-first__images ">
                     <img src="images/images-news/news-1.jpg"  class="w-100 news__img news-first__img" alt="about-img">
                 </div>
-                <p class="news__text news-first__text py-5">
+                <p class="news__text news-first__text">
                     Компания AT Consulting Восток (входит в Лигу Цифровой Экономики) развивает систему предоставления государственных услуг в электронном виде в городе Севастополе. В рамках проекта расширяется функциональность по приему госуслуг, проводится автоматизация бизнес-процессов, модернизирован региональный сегмент СМЭВ. Технологической основой послужило отечественное ПО на базе open source, разработанное компанией AT Consulting Восток.
                 </p>
             </div>
@@ -96,7 +96,7 @@
                 <div class="col-12 col-md-4 news__images news-second__images ">
                     <img src="images/images-news/news-2.jpg"  class="w-100 news__img news-second__img" alt="about-img">
                 </div>
-                <p class="news__text news-second__text py-5">
+                <p class="news__text news-second__text ">
                     Компания AT Consulting Восток (входит в Лигу Цифровой Экономики) внедряет систему мониторинга реализации мероприятий федеральной целевой программы (ФЦП) «Социально-экономическое развитие Республики Крым и г. Севастополя до 2024 года». АИС ФЦП объединит в одном информационном пространстве данные более 200 объектов строительства в городе Севастополе, что позволит эффективно контролировать ход и сроки их возведения. Технологической основой проекта стала цифровая платформа «Управление территорией (Smart City Cloud)».
                 </p>
             </div>
